# HidNeural

./: CMakeLists.txt  HidNeural.cpp  HidNeural.hpp  Neural.cpp  README.md  main.cpp
.VSCodeCounter/2020-11-25_15-09-41/: details.md  results.csv  results.md  results.txt
.VSCodeCounter/2020-11-25_15-19-05/: details.md  results.csv  results.md  results.txt
HidNeural/: HidNeural.cpp  HidNeural.hpp  HidNeuralNetworkLearner.cpp  HidNeuralNetworkLearner.hpp
examples/: CMakeLists.txt  main.cpp
